--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@
 .pnp.js
 /src/img
 /src/fonts
+/src/components/defaultComp
 /src/styles/scss
 /public/favicon.ico
 /public/1favicon.ico
+Supplements.txt
+/src/styles/css/style.css.map
 
 
 # testing
